resolved spacing and font issue on die-details and impressum pages

--- a/front-end-workspace/protec-angular-workspace/projects/protec/src/app/shared/components/g-button/g-button.component.scss
+++ b/front-end-workspace/protec-angular-workspace/projects/protec/src/app/shared/components/g-button/g-button.component.scss
@@ -49,6 +49,10 @@
     font-family: Dosis;
 }
 
+.btn-home{
+    color: red;
+}
+
 .btn-outline:hover{
     background-color: #4A6767;
     border-radius: 2px !important;
